--- a/includes/css/footer.css
+++ b/includes/css/footer.css
@@ -1,9 +1,30 @@
 footer{
+    display: flex;
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
     position: fixed;
     bottom: 0;
     width: 100%;
     z-index: -1;
-    height: 100px;
+    height: 75px;
     background-color: #f5f5f5;
-    color: black;
+    color: rgb(100,100,100);
+    margin: 0 auto;
+    text-align: center;
+}
+footer a{
+    color: rgb(108,118,200);
+    text-decoration: none;
+}
+.footer_split{
+    margin:auto;
+}
+#footer_media{
+    display: inline;
+}
+.footer_icon{
+    height: 35px;
+    width: 35px;
 }
