--- a/includes/css/header.css
+++ b/includes/css/header.css
@@ -5,13 +5,24 @@ header{
     z-index: 1;
     height: 70px;
     background-color: #f5f5f5;
-    color: black;
+}
+header #menu_icon{
+    display: none;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 30px;
+    top: 15px;
+    border: 1px solid black;
+    opacity: .5;
+    border-radius: 5px;
+    cursor: pointer;
+    cursor: hand;
 }
 #header_logo{
     width: 100px;
     margin: 10px 20px;
     filter: drop-shadow(-5px 5px 10px black);
-
 }
 #navbar{
     list-style: none;
@@ -20,6 +31,9 @@ header{
     margin: 0;
     height: 70px;
     top: 0;
+}
+#contact{
+    display: none;
 }
 #navbar li{
     height: 100%;
@@ -43,4 +57,42 @@ header{
 #navbar li.selected{
     background-color: #d3d3d3;
     box-shadow: inset 0px 0px 5px gray;
+}
+
+
+/*############################################*/
+/*############################################*/
+/*############################################*/
+/*############################################*/
+/*################ small Menu ###############*/
+
+header.small #menu_icon{
+    display: block;
+
+}
+header.small #navbar{
+    display: none;
+    position: absolute;
+    margin: 0;
+    height: 70px;
+    top: 0;
+}
+
+header.small #navbar.visible{
+    height: 450px;
+    width: 400px;
+    display: block;
+    background-color: #f5f5f5;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    margin: 0;
+    padding: 0;
+}
+header.small #navbar.visible li{
+    height: 75px;
+    width: 100%;
+}
+header.small #navbar.visible #contact{
+    display: block;
 }
