--- a/style.css
+++ b/style.css
@@ -8,23 +8,27 @@
     z-index:-1;
 }
 body{
-    margin: 400px 0 100px 0;
+    margin: 400px 0 75px 0;
 }
 .title{
     position: absolute;
     top: -250px;
     left: 150px;
-    font-size: 23px;
+    font-size: x-large;
     text-shadow: 4px 4px black;
 }
 .title p{
     text-shadow: 3px 3px black;
 }
-
-#chalkshelf{
+#shelf_div{
     position: absolute;
-    top: -15px;
-    min-width:600px;
+    top: -20px;
+    width: 100%;
+    overflow-x: hidden;
+}
+#chalkshelf{
+    display: block;
+    min-width: 1000px;
     width: 100%;
 }
 #content{
@@ -38,14 +42,22 @@ body{
 }
 #side_by_side{
     margin-top: 50px;
-    display: inline-flex;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
     width: 80%;
     margin-left: 10%;
-    justify-content: space-between;
 }
 #calendar_div{
     height: 600px;
     padding-bottom: 100px;
     width: 90%;
     margin-left: 5%;
+}
+#meetings_div, #twitter_div{
+    width: 400px;
+    text-align: center;
+    margin: 0 auto;
 }
