--- a/includes/css/header.css
+++ b/includes/css/header.css
@@ -3,7 +3,7 @@ header{
     top: 0;
     width: 100%;
     z-index: 1;
-    height: 70px;
+    height: 50px;
     background-color: #f5f5f5;
 }
 header #menu_icon{
@@ -20,8 +20,8 @@ header #menu_icon{
     cursor: hand;
 }
 #header_logo{
-    width: 100px;
-    margin: 10px 20px;
+    width: 65px;
+    margin: 10px -20px 0 20px;
     filter: drop-shadow(-5px 5px 10px black);
 }
 #navbar{
@@ -29,7 +29,7 @@ header #menu_icon{
     display: inline-flex;
     position: absolute;
     margin: 0;
-    height: 70px;
+    height: 50px;
     top: 0;
 }
 #contact{
@@ -42,7 +42,7 @@ header #menu_icon{
 #navbar .header_title{
     font-size: 15px;
     display: block;
-    height: 70px;
+    height: 50px;
     margin: 0 10px 0 10px;
     text-align: center;
     text-decoration: none;
@@ -50,7 +50,7 @@ header #menu_icon{
 }
 .nav_text{
     height: 15px;
-    padding-top: 27px;
+    padding-top: 17px;
     margin: 0 10px 0 10px;
 }
 
