working on grid system for the projects

--- a/includes/css/site-theme.css
+++ b/includes/css/site-theme.css
@@ -19,5 +19,6 @@ body{
     background: linear-gradient(to right,  #151515, #353535); /* Standard syntax */
     padding-top: 20px;
     width: 100%;
+    min-height: 100vh;
     margin: 0 auto;
 }
