--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -24,7 +24,6 @@ body{
 
 .grid {
     width: 90%;
-    display: flex;
     margin: 0 auto;
     justify-content: center;
 
@@ -47,7 +46,32 @@ body{
     border-radius:5px;
 }
 
+.overlay{
+    background-color: rgba(0,0,0,.5);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
 
+.overlay:hover {
+    background-color: rgba(0,0,0,.8);
+}
+
+.title{
+    display: none;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    z-index: 0;
+    pointer-events: none;
+    text-align: center;
+}
+
+.grid-item:hover .title{
+    display: block;
+}
 .grid-item--width2 { width: 400px; }
 .grid-item--height2 { height: 400px; }
 .grid-item--width3 { width: 600px; }
