--- a/resources/style.css
+++ b/resources/style.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     padding-top: 130px;
 }
-#content-sub{
+#content_sub{
     width: 90%;
     margin-left: 5%;
     padding-bottom: 5px;
