--- a/members/style.css
+++ b/members/style.css
@@ -40,10 +40,10 @@ body{
     width: 100%;
     height: 100%;
     background: none; /* For browsers that do not support gradients */
-    background: -webkit-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Firefox 3.6 to 15 */
-    background: radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)); /* Standard syntax (must be last) */
     -webkit-transition: all .2s;
     -moz-transition: all .2s;
     -ms-transition: all .2s;
