Fixed mysql connection issues, and added mysql dump to mysql/ directory. Also added to CONTRIBUTING to explain what needs to be done to work on this project.

--- a/resources/style.css
+++ b/resources/style.css
@@ -14,8 +14,12 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
+.resource_div{
+    margin-left: 45px;
+}
+
 .resource{
-    margin-left:45px;
     display: inline;
 }
 
