--- a/Focus/style.css
+++ b/Focus/style.css
@@ -9,11 +9,10 @@ body{
     width: 90%;
     margin-left: 5%;
     padding-bottom: 5px;
-
 }
 #back_link{
     position: absolute;
-    left: 80px;
+    left: 5%;
     color: white;
     top: 100px;
 }
@@ -23,4 +22,17 @@ body{
 #back_link img{
     height: 20px;
     margin-bottom: -5px;
+}
+#project{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+#project_image{
+    height:300px;
+    margin-bottom: 50px;
+}
+#project_text{
+    width: 75%;
+    margin-left: 12.5%;
 }
