--- a/admin/style.css
+++ b/admin/style.css
@@ -63,6 +63,8 @@ h2.selected_tab{
 .admin_form{
     background-color: rgba(0,0,0,.5);
     width: 400px;
+    height: 400px;
+    overflow-y: scroll;
     margin: 20px auto;
     border-radius: 10px;
 }
