--- a/includes/css/site-theme.css
+++ b/includes/css/site-theme.css
@@ -1,12 +1,8 @@
-@font-face {
-    font-family: myFirstFont;
-    src: url(/fontawesome-webfont.woff);
-}
 html{
     position: relative;
+    font-family: 'Ubuntu',sans-serif;
 }
 body{
-    font-family: Helvetica, sans-serif;
     color: white;
     width:100%;
     height: 100%;
