--- a/contact/style.css
+++ b/contact/style.css
@@ -10,16 +10,45 @@ body{
     margin-left: 5%;
     padding-bottom: 5px;
 
+
+}
+#grid{
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+    overflow:hidden;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
+}
+
+#text_div{
+    width: 500px;
+    margin: 20px;
+    /*height: 400px;*/
 }
 #contact_div{
+    width: 500px;
+    margin: 20px;
+    /*height: 400px;*/
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*margin-left: -200px;*/
+    text-align: center;
+}
+#contact_list {
+    text-align: left;
+}
+#contact_title{
+    text-align: center;
     width: 400px;
-    height: 400px;
+    height: 50px;
     position: absolute;
     left: 50%;
     margin-left: -200px;
-    text-align: center;
 }
-
 .email_input{
     width: 400px;
     margin: 10px auto 10px auto;
