--- a/includes/css/header.css
+++ b/includes/css/header.css
@@ -118,12 +118,13 @@ header.small #navbar.visible #contact{
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
     color: rgb(241,190,72);
-    border: 1px solid rgb(82,71,39);
+    /*border: 1px solid rgb(82,71,39);*/
+    border: none;
     background: rgb(82,71,39); /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* Standard syntax */
+    background: -webkit-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* Standard syntax */
     cursor: pointer;
     cursor: hand;
 }
@@ -137,13 +138,16 @@ header.small #navbar.visible #contact{
 
 #contact{
     background: rgb(82,71,39); /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(rgba(82,71,39,.7),rgba(82,71,39,1)); /* Standard syntax */
+    background: -webkit-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(82,71,39,.6),rgba(82,71,39,1)); /* Standard syntax */
     -webkit-box-shadow: inset 0px 0px 5px rgb(82,71,39);
     -moz-box-shadow: inset 0px 0px 5px rgb(82,71,39);
     box-shadow: inset 0px 0px 5px rgb(82,71,39);
+}
+#contact_us:focus{
+    outline: none;
 }
 #contact_text {
     color: rgb(241,190,72);
