--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body.mobile #side_by_side{
 #meetings_div, #twitter_div{
     width: 400px;
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
 }
 span{
     background-color: #55acee;
