--- a/includes/css/header.css
+++ b/includes/css/header.css
@@ -21,16 +21,20 @@ header #menu_icon{
 }
 #header_logo{
     width: 65px;
-    margin: 10px -20px 0 20px;
+    margin: 10px 20px 0 20px;
     filter: drop-shadow(-5px 5px 10px black);
+    cursor: pointer;
+    cursor: hand;
+    z-index: 2;
 }
 #navbar{
     list-style: none;
     display: inline-flex;
     position: absolute;
-    margin: 0;
+    margin: 0 0 0 -20px;
     height: 50px;
     top: 0;
+    z-index:1;
 }
 #contact{
     display: none;
