--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ span{
 
 #meeting-info{
     text-align: left;
-    margin: 20px 0 50px 50px;
+    margin: 20px 0 50px 0px;
 }
 
 body.mobile #meeting-info{
@@ -89,4 +89,15 @@ body.mobile #meeting-info{
 }
 #meeting-info h3{
     margin-bottom: 30px;
+}
+
+@media (max-width: 600px) {
+    .title{
+        font-size: large;
+        left: 50px;
+    }
+    #meetings_div, #twitter_div{
+        width: 90%;
+    }
+    #meetings
 }
