Added box shadows to header and bottom of the body.

--- a/includes/css/header.css
+++ b/includes/css/header.css
@@ -5,6 +5,7 @@ header{
     z-index: 1;
     height: 50px;
     background-color: #f5f5f5;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .7);
 }
 header #menu_icon{
     display: none;
